src/main/java/com/example/pairprogramming/user/error/ExpiredTokenException.java
package com.example.pairprogramming.user.error;

public class ExpiredTokenException extends RuntimeException{
}
